base page updated

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
     <h1>Hello, I am sourabh 🐶</h1>
+    <p>Currently I am pursuing BCA from Vivekananda Institute of Professional Studies.</p>
     
 </body>
 </html>
