project details added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 
     <h1>Hello, I am sourabh 🐶</h1>
     <p>Currently I am pursuing BCA from Vivekananda Institute of Professional Studies.</p>
+
+    <h2>My projects</h2>
+    <ul>
+        <li>How well do you know me?</li>
+        <li>Fandom quiz</li>
+        <li>yoda translator</li>
+        <li>Banana speak</li>
+        <li>Emoji interpreter</li>
+        <li>Music recommender</li>
+    </ul>
     
 </body>
 </html>
