--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
         <li>Music recommender</li>
     </ul>
     
+    <h2>My hobbies</h2>
+    <ul>
+        <li>Playing pc games</li>
+        <li>Art</li>
+        <li>Coding</li>
+        <li>Music</li>
+    </ul>
 </body>
 </html>
